<resources>
    <!--<string name="app_name">MCX</string>-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_market_watch_details">MarketWatchDetails</string>
    <string name="Product">Product</string>
    <string name="Expiry">Expiry</string>
    <string name="LTP">LTP</string>
    <string name="OPEN">OPEN</string>
    <string name="High">High</string>
    <string name="Low">Low</string>
    <string name="Close">Close</string>
    <string name="PercentageChange">%Change</string>
    <string name="title_activity_market_watch_top_gainers">TopGainers</string>
    <string name="title_activity_market_watch_top_losers">TopLosers</string>
    <string name="title_activity_bhav_copy_details">BhavCopy</string>
    <string name="PCP">PCP</string>
    <string name="Open">Open</string>
    <string name="High1">High</string>
    <string name="Low1">Low</string>
    <string name="date">Date</string>
    <string name="commodity">Commodity</string>
    <string name="oi">OI</string>
    <string name="Close1">Close</string>
    <string name="ATP">ATP</string>
    <string name="title_activity_scriptdet__details">Scriptdet</string>
    <string name="InstrumentIdentifier">InstrumentIdentifier</string>
    <string name="Product1">Product</string>
    <string name="Volume">Volume</string>
    <string name="ATP1">ATP</string>
    <string name="TotalQtyTraded">TotalQtyTraded</string>
    <string name="OPEN1">OPEN</string>
    <string name="High2">High</string>
    <string name="Low2">Low</string>
    <string name="Close2">Close</string>
    <string name="Value">Value</string>
    <string name="PreviousOI">PreviousOI</string>
    <string name="ChangeInOI">ChangeInOI</string>
    <string name="AbsChange">AbsChange</string>
    <string name="PercentageChange1">PercentageChange</string>
    <string name="title_activity_scriptmas__details">Scriptmas</string>
    <string name="Instrument_Code">Instrument_Code</string>
    <string name="Lot_Size">Lot_Size</string>
    <string name="Tick_Size">Tick_Size</string>
    <string name="Instrument_Description">Instrument_Description</string>
    <string name="Trading_Unit">Trading_Unit</string>
    <string name="marketwatch">MarketWatch</string>
    <string name="topgainer">TopGainer</string>
    <string name="toploser">Top Loser</string>
    <string name="bhavcopy">BhavCopy</string>
    <string name="scriptdet">Scriptdet</string>
    <string name="scriptmas">Scriptmas</string>
    <string name="aboutus">AboutUs</string>
    <string name="contactus">ContactUs</string>
    <string name="BuyPriced1">BuyPrice</string>
    <string name="BuyQty1">BuyQty</string>
    <string name="SellPrice1">SellPrice</string>
    <string name="SellQty">SellQty</string>
    <string name="Unit">Unit</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="MostActiveContractsValue">MActiveContracts(Value)</string>
    <string name="MostActiveContractsVolume">MActiveContracts(Volume)</string>
    <string name="LineChart">LineChart</string>
    <string name="BarChart">BarChart</string>
    <string name="directors_tag">Our leadership team provides strategic direction to Group companies.</string>

    <string name="overview">The Multi Commodity Exchange of India Limited (MCX),
        India’s first listed exchange,is a state-of-the-art, commodity futures exchange that facilitates online trading,
        and clearing and settlement of commodity futures transactions,
        thereby providing a platform for risk management. The Exchange,
        which started operations in November 2003,
        operates under the regulatory framework of Securities and Exchange Board of India (SEBI). </string>

    <string name="overview1">MCX offers trading in varied commodity futures contracts across segments including bullion,
        ferrous and non-ferrous metals, energy and agricultural commodities.
        The Exchange focuses on providing commodity value chain participants with neutral,
        secure and transparent trade mechanisms, and formulating quality parameters and trade regulations,
        in conformity with the regulatory framework.The Exchange has an extensive national reach, with 1731 members,
        operations through 475,519 trading terminals (including CTCL),
        spanning over 1811 cities and towns across India.MCX is India’s leading commodity futures exchange with a
        market share of 84.13 per cent in terms of the value of commodity futures contracts traded in Q2 FY2015-16.</string>
    <string name="overview2">
        To ease participation, the Exchange offers facilities such as calendar-spread facility,
        as also EFP (Exchange of Futures for Physical) transactions which enables participants
        to swap their positions in the futures/ physical markets. The Exchange’s flagship index,
        the MCXCOMDEX, is a real-time composite commodity futures price index which gives
        information on market movements in key commodities. Other commodity indices developed
        by the exchange include MCXAgri, MCXEnergy, and MCXMetal.
        MCX has been certified to three ISO standards including ISO 9001:2008 quality management system,
        ISO 27001:2013 information security management standard and ISO 14001:2004 environment management standard.
    </string>
    <string name="overview3">
        With an aim to seamlessly integrate with the global commodities ecosystem,
        MCX has forged strategic alliances with leading international exchanges such as CME Group,
        London Metal Exchange (LME), The Baltic Exchange, Dalian Commodity Exchange (DCE) and Taiwan Futures Exchange (TAIFEX).
        The Exchange has also tied-up with various trade bodies, corporates,
        educational institutions and R&amp;D centres across the country.
        These alliances enable the Exchange in improving trade practices, increasing awareness,
        and facilitating overall improvement of commodity futures market.
    </string>
    <string name="overview4">
        MCX’s ability to use and apply technology efficiently is a key factor in the development of its business.
        The exchange’s technology framework is designed to provide high availability for all critical components,
        which guarantees continuous availability of trading facilities.
        The robust technology infrastructure of the exchange,
        along with its with rapid customisation and deployment capabilities enables it to operate efficiently with fast order routing,
        immediate trade execution, trade reporting, real-time risk management, market surveillance and market data dissemination.
    </string>
    <string name="overview5">
        The Exchange is committed to nurturing communities that are vital for the development of its business. 
        To achieve our goal of inclusive growth, we collaborate with diversified partners. 
        Gramin Suvidha Kendra, our social inclusion programme in partnership with India Post, 
        seeks to enhance farmers’ value realisation from agricultural activities.
    </string>
    <string name="overview6">
        MCX has been continuously raising the bar through effective research and product development,
        intelligent use of information and technology, innovation, thought leadership and ethical business conduct.
    </string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="splashscreen">splash_screen</string>
    <string name="title_activity_most_active_contracts_value__details">
        MACVALUE
    </string>
    <string name="title_activity_most_activity_volume__details">MACVOLUME</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="title_activity_LineChart">LineChart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_linechart">LinechartActivity</string>

    <string-array name="Graphs">
        <item>Gold</item>
        <item>Silver</item>
    </string-array>

    <string name="title_activity_line_chart1">LineChart1</string>
    <string name="title_activity_table_graph">Table_graph</string>
    <string name="title_activity_graph">GraphActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
