<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/MarketWatch"
            android:title="Market Watch"
            android:icon="@drawable/ic_bhavcopy"/>
        <item
            android:id="@+id/MACValue"
            android:title="MAC Value"/>
        <item
            android:id="@+id/MACVolume"
            android:title="MAC Volume"/>
        <item
            android:id="@+id/TopGainer"
            android:title="Top Gainer" />
        <item
            android:id="@+id/TopLoser"
            android:title="@string/toploser" />
        <item
            android:id="@+id/Graphs"
            android:title="Graphs"/>
        <item
            android:id="@+id/BhavCopy"
            android:title="@string/bhavcopy" />
        <item
            android:id="@+id/Scriptdet"
            android:title="@string/scriptdet" />
        <item
            android:id="@+id/Scriptmas"
            android:title="@string/scriptmas" />
        <item
            android:id="@+id/Aboutus"
            android:title="@string/aboutus" />
        <item
            android:id="@+id/ContactUs"
            android:title="@string/contactus" />

    </group>



</menu>
