<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overview"
        android:text="Overview"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="#de7a49"
        android:layout_marginTop="20dp"
        android:fontFamily="RalewayMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overviewdetails"
        android:text="@string/overview"
        android:layout_below="@+id/overview"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="RalewayMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overviewdetails1"
        android:text="@string/overview1"
        android:layout_below="@+id/overviewdetails"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="RalewayMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overviewdetails2"
        android:text="@string/overview2"
        android:layout_below="@+id/overviewdetails1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="RalewayMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overviewdetails3"
        android:text="@string/overview3"
        android:layout_below="@+id/overviewdetails2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="RalewayMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overviewdetails4"
        android:text="@string/overview4"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/overviewdetails3"
        android:layout_marginTop="10dp"
        android:fontFamily="RalewayMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overviewdetails5"
        android:text="@string/overview5"
        android:layout_below="@+id/overviewdetails4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="RalewayMedium"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/overviewdetails6"
        android:text="@string/overview6"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/overviewdetails5"
        android:layout_marginTop="10dp"
        android:fontFamily="RalewayMedium"/>

</LinearLayout>