<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BhavCopy.BhavCopy_Details"
    tools:showIn="@layout/activity_bhav_copy_details"
    android:background="@drawable/button_style">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:id="@+id/tablelayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tablerow0"
            android:background="@drawable/bhavcopy">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Bhavcopy"
                android:textStyle="bold|italic"
                android:paddingStart="20dp"
                android:textSize="20sp"
                android:textColor="#ffff"
                android:padding="10dp"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tablerow1"
            android:background="@color/Header">
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/commodity"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/commodity" />
            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/Expiry"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Expiry"
                android:layout_weight="1"
                android:gravity="center"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tablerow2"
            android:background="@color/Header">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/Close"
                android:text="@string/Close"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/PCP"
                android:text="@string/PCP"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/ATP"
                android:text="@string/ATP"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tablerow3"
            android:background="@color/Header">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/volume"
                android:text="@string/Volume"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/Value"
                android:text="@string/Value"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"/>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/oi"
                android:text="@string/oi"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"/>


        </TableRow>



    </TableLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/tablelayout"
            android:isScrollContainer="false"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

        </ListView>

</RelativeLayout>
