<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:id="@+id/tablelayout">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tablerow1">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:text="@string/date"
                        android:textColor="#ffff"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"/>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/commodity"
                        android:layout_weight="1"
                        android:textColor="#ffff"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left"
                        android:paddingStart="40dp"
                        android:id="@+id/commodity" />
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/Expiry"
                        android:text="@string/Expiry"
                        android:layout_weight="1"
                        android:textColor="#ffff"
                        android:paddingStart="45dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="left">

                    </TextView>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tablerow2">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/Close"
                        android:textColor="#ffff"
                        android:layout_weight="1"
                        android:paddingEnd="18dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/PCP"
                        android:text="@string/PCP"
                        android:paddingEnd="20dp"
                        android:textColor="#ffff"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/ATP"
                        android:text="@string/ATP"
                        android:textColor="#ffff"
                        android:paddingEnd="40dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tablerow3">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/volume"
                        android:textColor="#ffff"
                        android:text="@string/Volume"
                        android:paddingEnd="18dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/Value"
                        android:text="@string/Value"
                        android:textColor="#ffff"
                        android:layout_weight="1"
                        android:paddingEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/oi"
                        android:text="@string/oi"
                        android:textColor="#ffff"
                        android:layout_weight="1"
                        android:paddingEnd="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="right"/>

                </TableRow>


            </TableLayout>
    </ScrollView>


</RelativeLayout>